# Graphsmith

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PASTE_INTO_AGENT.txt  README.md  START_HERE_PROMPT.txt  mkdocs.yml  pyproject.toml
api/: REGISTRY_API_DRAFT.md
docs/: AGENT_TASK.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUTOGEN_BATTERY.md  AUTO_SKILL_CREATION.md  BINDING_SEMANTICS.md  CAPABILITY_LADDER_RESULTS.md  CLOSED_LOOP_SKILL_GENERATION.md  CLOUDFLARE_REMOTE_REGISTRY.md  DEBUGGING_AND_TRACES.md  EXAMPLE_WORKFLOWS.md  GRAPHSMITH_ARCHITECTURE_V1.md  GRAPH_UI.md  IMPLEMENTATION_PLAN.md  IR_EVAL_COMPARISON.md  IR_SPRINT_2_ROBUSTNESS_AND_SEMANTICS.md  IR_SPRINT_3_SEMANTIC_FIDELITY.md  IR_SPRINT_4_CANDIDATE_RERANKING.md  IR_SPRINT_5_FINAL_FAILURE_ANALYSIS.md  IR_SPRINT_6_SEMANTIC_DECOMPOSITION.md  IR_SPRINT_7_FINAL_HOLDOUT_CLEANUP.md  IR_SPRINT_8_STABILITY_AND_TRACE_EXPORT.md  IR_SPRINT_9_SINGLE_FAILURE_CLEANUP.md  LEARNED_RERANKER_PROTOTYPE.md  LIVE_CAPABILITY_CAMPAIGN_RESULTS.md  OPEN_STANDARD_NOTES.md  PLANNER_SEMANTICS.md  PLANNING_IR_ARCHITECTURE.md  PLAN_REFINEMENT.md  REGISTRY_SEMANTICS.md  RELEASE_CHECKLIST.md  REMOTE_SKILL_REGISTRY_FOUNDATION.md  REMOTE_SKILL_REGISTRY_V1_DESIGN.md  REPO_STRUCTURE.md  RERANKER_DATASET_SPRINT.md  ROADMAP.md  RUNNING_EVALS.md  SKILLS.md  SPRINT_06_SEMANTICS.md  SPRINT_07A_PLANNER_PARSING.md  (+90 more)
evaluation/: README.md  results_anthropic.json
graphsmith/: constants.py  exceptions.py  graph_export.py  type_system.py
prompts/: CLAUDE_CODE_BOOTSTRAP.md  CODEX_BOOTSTRAP.md
(+417 files in other folders)
